--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
-<script>/*<![CDATA[*/function load(){document.cookie.indexOf("raeouorn")>=0&&(window.location="welcome.html")}function setcookieonaccept(){document.cookie="raeouorn=iasern",window.location="welcome.html"}window.onload=load();/*]]>*/</script>
+<script>/*<![CDATA[*/function load(){document.cookie.indexOf("raeouorn")>=0&&(window.location="index1.html")}function setcookieonaccept(){document.cookie="raeouorn=iasern",window.location="welcome.html"}window.onload=load();/*]]>*/</script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Warning - Adult Content</title>
 <style type="text/css">/*<![CDATA[*/<!-- .style1{font-size:19px;font-weight:bold;color:white}body,td,th{font-family:Arial,Helvetica,sans-serif}.style2{font-size:38px;font-weight:bold;color:white;text-decoration:underline}.style3{font-size:29px;font-weight:bold;color:black}.style5{font-size:30px}hr.style13{height:10px;border:0;box-shadow:0 10px 10px -10px #8c8b8b inset}-->body{background-color:#936}/*]]>*/</style>
